和客户端之间的通讯，具体功能实现还没Ok，先搭好，再进行业务功能的加入

--- a/push-data/node-server/src/main/resources/application.yml
+++ b/push-data/node-server/src/main/resources/application.yml
@@ -9,6 +9,7 @@ push-data:
   node-server:
     port: ${random.int[9001,9999]}
     messagePort: ${random.int[8001,8999]}
+    devicePort: ${random.int[3001,3999]}
     name: NodeServer-${random.int(100)}
     initializedConnect: 16384
   zookeeper:
