--- a/push-data/data-center/pom.xml
+++ b/push-data/data-center/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.loserclub.pushdata</groupId>
     <artifactId>datacenter</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>datacenter</name>
+    <name>data-center</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -60,6 +60,19 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>4.1.50.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.2.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
