--- a/push-data/data-center/src/main/resources/application.yml
+++ b/push-data/data-center/src/main/resources/application.yml
@@ -1,10 +1,17 @@
 
 server:
   port: ${random.int[5001,5999]}
-
 spring:
+  application:
+    name: data-center
+
   redis:
     host: 127.0.0.1:6379
+eureka:
+  client:
+    #设置服务注册中心的URL
+    service-url:
+      defaultZone: http://localhost:1901/eureka/
 
 push-data:
   data-center:
