--- a/push-data/data-center/src/main/resources/application.yml
+++ b/push-data/data-center/src/main/resources/application.yml
@@ -1,12 +1,97 @@
 
 server:
-  port: ${random.int[5001,5999]}
+  port: 5001
 spring:
   application:
     name: data-center
 
   redis:
-    host: 127.0.0.1:6379
+    password:
+    cluster:
+      nodes: localhost:6379,localhost:6380,localhost:6381
+      max-redirects: 3
+    lettuce:
+      pool:
+        max-idle: 16
+        max-active: 32
+        min-idle: 8
+        max-wait: -1
+    database: 0
+  redis2:
+    password:
+    cluster:
+      nodes: localhost:6382,localhost:6383,localhost:6384
+      max-redirects: 3
+    lettuce:
+      pool:
+        max-idle: 16
+        max-active: 32
+        min-idle: 8
+        max-wait: -1
+    database: 0
+
+  #阿里数据库连接池设置
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:5432/loserclub}
+    username: ${SPRING_DATASOURCE_USERNAME:loserclub}
+    password: ${SPRING_DATASOURCE_PASSWORD:loserclub}
+    druid:
+      #最大值
+      max-active: 10
+      #最小值
+      min-idle: 5
+      #初始化大小
+      initial-size: 5
+      #最大等待时间，配置获取连接等待超时，时间单位都是毫秒ms
+      max-wait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      time-between-eviction-runs-millis: 3000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      min-evictable-idle-time-millis: 30000
+      validation-query: SELECT 1
+      test-on-borrow: false
+      test-on-return: false
+      # 打开PSCache
+      pool-prepared-statements: true
+      #最大PSCache连接
+      max-pool-prepared-statement-per-connection-size: 20
+      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，
+      #'wall'用于防火墙
+      filter:
+        slf4j:
+          statement-sql-pretty-format: true
+          result-set-log-enabled: false
+          statement-executable-sql-log-enable: false
+          enabled: true
+      # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+  rabbitmq:
+    username: root
+    password: root
+    addresses: localhost:5672
+    virtual-host: /
+    listener:
+      simple:
+        concurrency: 5
+        acknowledge-mode: manual
+        max-concurrency: 10
+        prefetch: 1
+      direct:
+        acknowledge-mode: manual
+        prefetch: 1
+elasticsearch:
+  host: 127.0.0.1
+  port: 9200
+  clusterName: es
+  schema: http
+  index:
+    - shardNum: 3
+      replicasNum: 2
+      name: doc
+      properties: [name, title, tags, content, date]
+
 eureka:
   client:
     #设置服务注册中心的URL
@@ -15,9 +100,9 @@ eureka:
 
 push-data:
   data-center:
-    port: ${random.int[4001,4999]}
-    messagePort: ${random.int[6001,6999]}
-    name: DataCenter-${random.int(100)}
+    port: 4001
+    messagePort: 6001
+    name: DataCenter-1
     initializedConnect: 16384
   zookeeper:
     servers: localhost:2181,localhost:2182,localhost:2183
