类结构调整，抽象化

--- a/loser-club/push-data/data-center/src/main/resources/application.yml
+++ b/loser-club/push-data/data-center/src/main/resources/application.yml
@@ -131,6 +131,7 @@ push-data:
   data-center:
     port: 4001
     messagePort: 6001
+    devicePort: 0
     name: center1
     initializedConnect: 16384
   zookeeper:
