--- a/loser-club/shared/pom.xml
+++ b/loser-club/shared/pom.xml
@@ -12,10 +12,6 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>shared</name>
 
-    <properties>
-        <java.version>14</java.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -99,6 +95,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox.version}</version>
         </dependency>
     </dependencies>
 
