--- a/loser-club/eureka-server/src/main/resources/application.yml
+++ b/loser-club/eureka-server/src/main/resources/application.yml
@@ -7,5 +7,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:1901/eureka/
+    register-with-eureka: false
+    fetch-registry: false
   instance:
     hostname: eureka1.com
