--- a/client/thumbing/pubspec.yaml
+++ b/client/thumbing/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   equatable: ^1.0.0
   rxdart: ^0.23.1
   uuid: ^2.1.0
+  shared_preferences: ^0.5.3+4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
