--- a/client/thumbing/pubspec.yaml
+++ b/client/thumbing/pubspec.yaml
@@ -29,7 +29,11 @@ dependencies:
   rxdart: ^0.23.1
   uuid: ^2.1.0
   shared_preferences: ^0.5.3+4
-
+  flutter_launcher_icons: ^0.7.5
+  flutter_icons:
+    git:
+      url: https://github.com/flutter-studio/flutter-icons.git
+      ref: 1.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
