--- a/client/thumbing/pubspec.yaml
+++ b/client/thumbing/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
       ref: 1.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
-
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
 # The following section is specific to Flutter.
 flutter:
 
