--- a/client/thumbing/pubspec.yaml
+++ b/client/thumbing/pubspec.yaml
@@ -23,17 +23,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  #bloc
   flutter_bloc: ^5.0.0
+  #http
   http: ^0.12.0
+  #equatable
   equatable: ^1.0.0
+  #Reactive Extensions响应式编程包
   rxdart: ^0.23.1
+  #uuid
   uuid: ^2.1.0
+  #本地存储
   shared_preferences: ^0.5.3+4
+  #app图标
   flutter_launcher_icons: ^0.7.5
+  #海量icons包
   flutter_icons:
     git:
       url: https://github.com/flutter-studio/flutter-icons.git
       ref: 1.1.0
+  #websocket
+  web_socket_channel: ^1.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 dev_dependencies:
