--- a/client/thumbing/pubspec.yaml
+++ b/client/thumbing/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
       ref: 1.1.0
   #websocket
   web_socket_channel: ^1.1.0
+  #用于在上层显示的组件(未读消息的小红点)
+  badges: ^1.1.1
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 dev_dependencies:
