--- a/thumbing/push-data/data-center/src/main/resources/application.yml
+++ b/thumbing/push-data/data-center/src/main/resources/application.yml
@@ -110,7 +110,7 @@ spring:
 elasticsearch:
   host: 127.0.0.1
   port: 9200
-  clusterName: loser_club
+  clusterName: thumbing
   schema: http
   index:
     name: doc
@@ -155,7 +155,7 @@ push-data:
     initializedConnect: 16384
   zookeeper:
     servers: localhost:2181,localhost:2182,localhost:2183
-    namespace: loser-club
+    namespace: thumbing
     session-timeout: 6000
     connection-timeout: 6000
     max-retries: 1000
