--- a/thumbing/push-data/data-center/src/main/resources/application.yml
+++ b/thumbing/push-data/data-center/src/main/resources/application.yml
@@ -55,7 +55,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://192.168.89.1:3306/mysql_loserclub}
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://192.168.89.1:3306/thumbing?serverTimezone=Asia/Shanghai}
     username: ${SPRING_DATASOURCE_USERNAME:root}
     password: ${SPRING_DATASOURCE_PASSWORD:123456}
     druid:
@@ -106,7 +106,7 @@ spring:
     mongodb:
       host: 192.168.89.1
       port: 27017
-      database: mongo_loserclub
+      database: thumbing
 elasticsearch:
   host: 127.0.0.1
   port: 9200
