--- a/thumbing/content-server/src/main/resources/application.yml
+++ b/thumbing/content-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 7066
 spring:
   application:
-    name: data-access
+    name: content-server
   redis:
     host: localhost
     port: 6379
