1.拆分userInfo和sys_user 2.终于发现swagger不显示的原因了。。。。

--- a/thumbing/gateway/src/main/resources/application.yml
+++ b/thumbing/gateway/src/main/resources/application.yml
@@ -50,8 +50,8 @@ eureka:
     service-url:
       defaultZone: http://localhost:1901/eureka/
 use:
-  redis: true
-  security: true
+  redis: false
+  security: false
   feign: true
 
 security:
