--- a/thumbing/content-server/pom.xml
+++ b/thumbing/content-server/pom.xml
@@ -26,6 +26,14 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-amqp</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-data-jpa</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -53,16 +61,6 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.15</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.22</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
