--- a/thumbing/gateway/pom.xml
+++ b/thumbing/gateway/pom.xml
@@ -60,8 +60,8 @@
                     <artifactId>spring-webmvc</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>com.github.jsqlparser</groupId>
-                    <artifactId>jsqlparser</artifactId>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
