1.统一管理maven版本 2.增加swagger的配置开关 3.content增加路由

--- a/thumbing/gateway/src/main/resources/application.yml
+++ b/thumbing/gateway/src/main/resources/application.yml
@@ -45,6 +45,12 @@ spring:
             - Path=/api/auth/**
           filters:
             - StripPrefix=2
+        - id: content
+          uri: lb://content-server
+          predicates:
+            - Path=/api/content/**
+          filters:
+            - StripPrefix=2
 eureka:
   client:
     service-url:
@@ -53,6 +59,7 @@ use:
   redis: false
   security: false
   feign: true
+  swagger: false
 
 security:
   ignores: /error/**;/swagger-resources/**;/swagger-ui.html;/v2/api-docs;/webjars/**
