1.用户管理模块 2.访问控制锁

--- a/thumbing/auth-server/src/main/resources/application.yml
+++ b/thumbing/auth-server/src/main/resources/application.yml
@@ -69,7 +69,7 @@ feign:
         readTimeout: 100000
         loggerLevel: full
   hystrix:
-    enabled: true
+    enabled: false
 
 hystrix:
   command:
