--- a/thumbing/content-server/src/main/resources/application.yml
+++ b/thumbing/content-server/src/main/resources/application.yml
@@ -57,7 +57,7 @@ feign:
         readTimeout: 100000
         loggerLevel: full
   hystrix:
-    enabled: true
+    enabled: false
 
 hystrix:
   command:
