1.增加自定义线程池，使用线程池异步处理登陆成功事件 2.增加md5加密方法，用于添加好友时的加密信息处理

--- a/thumbing/content-server/src/main/resources/application.yml
+++ b/thumbing/content-server/src/main/resources/application.yml
@@ -45,6 +45,7 @@ use:
   security: true
   feign: true
   swagger: true
+  customThreadPool: false
 
 security:
   ignores: /error/**;/swagger-resources/**;/swagger-ui.html;/v2/api-docs;/webjars/**
