--- a/thumbing/gateway/src/main/resources/application.yml
+++ b/thumbing/gateway/src/main/resources/application.yml
@@ -60,6 +60,7 @@ use:
   security: false
   feign: true
   swagger: false
+  customThreadPool: false
 
 security:
   ignores: /error/**;/swagger-resources/**;/swagger-ui.html;/v2/api-docs;/webjars/**
