--- a/thumbing/upload-file/src/main/resources/application.yml
+++ b/thumbing/upload-file/src/main/resources/application.yml
@@ -31,6 +31,7 @@ use:
   security: true
   feign: true
   swagger: true
+  customThreadPool: false
 
 security:
   ignores: /error/**;/swagger-resources/**;/swagger-ui.html;/v2/api-docs;/webjars/**
