add rabbitmq configuration in shared module and send message to a queue when the friend apply stored in db successfully.  And data center will listen this queue.

--- a/thumbing/auth-server/src/main/resources/application.yml
+++ b/thumbing/auth-server/src/main/resources/application.yml
@@ -59,6 +59,7 @@ use:
   feign: true
   swagger: true
   customThreadPool: true
+  rabbitmq: false
 
 security:
   ignores: /error/**;/swagger-resources/**;/swagger-ui.html;/v2/api-docs;/webjars/**
