add a mudule for storing all the data which will be pushed to user

--- a/thumbing/pom.xml
+++ b/thumbing/pom.xml
@@ -56,6 +56,7 @@
         <module>auth-server</module>
         <module>content-server</module>
         <module>user-management</module>
+        <module>record-server</module>
     </modules>
     <dependencyManagement>
         <dependencies>
