--- a/thumbing/record-server/pom.xml
+++ b/thumbing/record-server/pom.xml
@@ -8,9 +8,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.thumbing</groupId>
-    <artifactId>contentserver</artifactId>
+    <artifactId>recordserver</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>content-server</name>
+    <name>record-server</name>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>14</java.version>
@@ -22,10 +23,6 @@
             <artifactId>shared</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-amqp</artifactId>
-                </exclusion>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -75,10 +72,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
