1.implement record service 2.distributed lock on sesion record cache

--- a/thumbing/record-server/src/main/resources/application.yml
+++ b/thumbing/record-server/src/main/resources/application.yml
@@ -45,7 +45,7 @@ use:
   security: true
   feign: true
   swagger: true
-  customThreadPool: false
+  customThreadPool: true
   rabbitmq: true
 
 security:
