change structure of mongodb documents and change stucture of entity in elasticsearch

--- a/thumbing/content-server/src/main/resources/application.yml
+++ b/thumbing/content-server/src/main/resources/application.yml
@@ -75,7 +75,7 @@ elasticsearch:
       -title
       -tags
       -content
-      -abstracts
       -date
       -userId
       -nickName
+      -contentId
