move xxl-job to content server

--- a/thumbing/content-server/src/main/resources/application.yml
+++ b/thumbing/content-server/src/main/resources/application.yml
@@ -79,3 +79,18 @@ elasticsearch:
       -userId
       -nickName
       -contentId
+
+xxl:
+  job:
+    admin:
+      addresses: http://127.0.0.1:7070/xxl-job-admin
+    accessToken:
+    executor:
+      appname: content-executor
+      #注册地址[选填]，优先使用该配置作为注册地址，为空时使用内嵌服务 ”IP:PORT“ 作为注册地址
+      address:
+      #执行器IP[选填]，为空则自动获取
+      ip:
+      port: 9999
+      logpath: /data/applogs/xxl-job/jobhandler
+      logretentiondays: 30
