--- a/thumbing/content-server/pom.xml
+++ b/thumbing/content-server/pom.xml
@@ -89,6 +89,12 @@
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
             <version>${elasticsearch.version}</version>
         </dependency>
+        <!-- xxl-job-core -->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>${xxljob.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
