1.update and delete in elasticsearch 2.moments service interface

--- a/thumbing/content-server/src/main/resources/application.yml
+++ b/thumbing/content-server/src/main/resources/application.yml
@@ -70,7 +70,7 @@ elasticsearch:
     shardNum: 3
     replicasNum: 2
     properties:
-      -id
+      -contentId
       -name
       -title
       -tags
