Artilce, Moments and Comment Controller

--- a/thumbing/gateway/src/main/resources/application.yml
+++ b/thumbing/gateway/src/main/resources/application.yml
@@ -63,6 +63,12 @@ spring:
             - Path=/api/record/**
           filters:
             - StripPrefix=2
+        - id: content
+          uri: lb://content-server
+          predicates:
+            - Path=/api/record/**
+          filters:
+            - StripPrefix=2
 eureka:
   client:
     service-url:
