--- a/thumbing/upload-file/pom.xml
+++ b/thumbing/upload-file/pom.xml
@@ -62,6 +62,11 @@
             <version>${oss.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>${qiniu.version}</version>
+        </dependency>
+        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${joda-time.version}</version>
